# imageutils

./: .gitignore  .landscape.yml  .travis.yml  README.md  README.rst  setup.cfg
docs/: conf.py  index.rst  rtd-pip-requirements.txt
docs/imageutils/: api-spec.rst  index.rst
imageutils/: __init__.py  array_utils.py  functions.cpp  functions.h  lacosmicx.pyx  laxtest.pyx  laxutils.c  laxutils.cpp  laxutils.h  laxwrappers.pyx  runlaxtests.py  setup.py  setup_package.py  test.cpp  test.pyx
imageutils/lacosmicx/: __init__.py  lacosmicx.pyx  laxutils.c  laxutils.h  laxwrappers.pyx  setup_package.py
imageutils/lacosmicx/tests/: test_lacosmicx.py
imageutils/normalization/: interval.py  stretch.py  transform.py
imageutils/tests/: test_lacosmicx.py
