[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = imageutils
description = Image processing utilities for Astropy
long_description = Image processing utilities for Astropy
author = imageutils developers
author_email = astropy-dev@googlegroups.com
license = BSD
url = https://github.com/astropy/imageutils
edit_on_github = True
github_project = astropy/imageutils
